--- a/research.html
+++ b/research.html
@@ -259,7 +259,15 @@ Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3459289">"Pricing with Fairness,"</a> with A. N. Elmachtoub and X. Lei, Under second round of review at <b>Management Science</b> (after Reject and Resubmit) <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3345669">"Empirical Analysis of Referrals in Ride-Sharing,"</a> with C. Fernandez and A. Ghose, Major Revision in <b>Information Systems Research</b> <br /> <!-- <font color="red"<b>(NEW - March 2019)</b></font> <br /> -->
+Media coverage: <a href="https://www.stern.nyu.edu/experience-stern/news-events/new-research-nyu-stern-shows-how-marketers-can-boost-high-quality-customer-referrals-drive-growth">NYU Stern Research Highlights</a>, <a href="https://www.nyu.edu/about/news-publications/news/2019/may/new-stern-research-shows-how-marketers-can-boost-high-quality-cu.html">NYU News</a> <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3459289">"Pricing with Fairness,"</a> with A. N. Elmachtoub and X. Lei, Major Revision in <b>Management Science</b> <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
 Accepted for oral presentation at the 2020 Workshop on Mechanism Design for Social Good (MD4SG) <br />
 </div>
 </p>
@@ -267,16 +275,14 @@ Accepted for oral presentation at the 2020 Workshop on Mechanism Design for Soci
 </ul>
 
 <ul>
-<li><p><a href="">"A Field Experiment on Airline Lead-in Fares,"</a> with A. Jacquillat and J. C. Serpa, Under second round of review at <b>Management Science</b> (after Reject and Resubmit) <br />
-Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3665366">"Field Experiments (and the lack of thereof) for Testing Revenue Strategies in the Hospitality Industry,"</a> with D. Lopez Mateos and N. Pyron, Revise and Resubmit in <b>Cornell Hospitality Quarterly</b> <br />
 </div>
-</p>
 </li>
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3345669">"Empirical Analysis of Referrals in Ride-Sharing,"</a> with C. Fernandez and A. Ghose, Major Revision in <b>Information Systems Research</b> <br /> <!-- <font color="red"<b>(NEW - March 2019)</b></font> <br /> -->
-Media coverage: <a href="https://www.stern.nyu.edu/experience-stern/news-events/new-research-nyu-stern-shows-how-marketers-can-boost-high-quality-customer-referrals-drive-growth">NYU Stern Research Highlights</a>, <a href="https://www.nyu.edu/about/news-publications/news/2019/may/new-stern-research-shows-how-marketers-can-boost-high-quality-cu.html">NYU News</a> <br />
+<li><p><a href="">"A Field Experiment on Airline Lead-in Fares,"</a> with A. Jacquillat and J. C. Serpa, Under second round of review at <b>Management Science</b> (after Reject and Resubmit) <br />
+Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </div>
 </p>
 </li>
@@ -316,12 +322,6 @@ Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
 <ul>
 <li><p><a href="http://ssrn.com/abstract=2607688">"Competition and Externalities in Green Technology Adoption,"</a> with G. Perakis and C. Thraves, Submitted <br />
 First Place in the 2015 Best Student Paper POM Supply Chain <br />
-</div>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3665366">"Field Experiments (and the lack of thereof) for Testing Revenue Strategies in the Hospitality Industry,"</a> with D. Lopez Mateos and N. Pyron, Submitted <br />
 </div>
 </li>
 </ul>
