--- a/research.html
+++ b/research.html
@@ -281,7 +281,7 @@ Accepted for oral presentation at the 2020 Workshop on Mechanism Design for Soci
 </ul>
 
 <ul>
-<li><p><a href="">"A Field Experiment on Airline Lead-in Fares,"</a> with A. Jacquillat and J. C. Serpa, Under second round of review at <b>Management Science</b> (after Reject and Resubmit) <br />
+<li><p><a href="">"A Field Experiment on Airline Lead-in Fares,"</a> with A. Jacquillat and J. C. Serpa, Under second round of review in <b>Management Science</b> (after Reject and Resubmit) <br />
 Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </div>
 </p>
