--- a/research.html
+++ b/research.html
@@ -267,7 +267,7 @@ Media coverage: <a href="https://www.stern.nyu.edu/experience-stern/news-events/
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3459289">"Pricing with Fairness,"</a> with A. N. Elmachtoub and X. Lei, Major Revision in <b>Management Science</b> <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3459289">"Price Discrimination with Fairness Constraints,"</a> with A. N. Elmachtoub and X. Lei, Major Revision in <b>Management Science</b> <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
 Accepted for oral presentation at the 2020 Workshop on Mechanism Design for Social Good <br />
 </div>
 </p>
