--- a/patents.html
+++ b/patents.html
@@ -31,6 +31,11 @@
 <h3>Patents</h3>
 <ul>
 
+<li><p><b>US20170140414 A1</b> – <a href="https://www.google.com/patents/US20170140414">"Computerized Promotion Price Scheduling Utilizing Multiple Product Demand Model"</a> 
+<br>
+Invention disclosure published in May 2017 and granted in 2020 (M. C. Cohen, J. J. Kalas, K. Panchamgam and G. Perakis) </a></p>
+</li>
+  
 <li><p><b>US20150081393 A1</b> – <a href="https://www.google.com/patents/US20150081393">"Product Promotion Optimization System"</a> 
 <br>
 Invention disclosure published in March 2015 (M. C. Cohen, Z. Leung, K. Panchamgam and G. Perakis) </a></p>
@@ -45,11 +50,6 @@ Invention disclosure published in January 2015 (M. C. Cohen, P. Harsha and M. Et
 <br>
 Invention disclosure published in October 2013 (M. C. Cohen, A. Vakhutinsky and K. Panchamgam) </a></p>
 <br>
-
-<li><p><b>US20170140414 A1</b> – <a href="https://www.google.com/patents/US20170140414">"Computerized Promotion Price Scheduling Utilizing Multiple Product Demand Model"</a> 
-<br>
-Invention disclosure published in May 2017 (M. C. Cohen, J. J. Kalas, K. Panchamgam and G. Perakis) </a></p>
-</li>
 
 <div id="footer">
 <div id="footer-text">
