--- a/patents.html
+++ b/patents.html
@@ -33,23 +33,23 @@
 
 <li><p><b>US20170140414 A1</b> – <a href="https://www.google.com/patents/US20170140414">"Computerized Promotion Price Scheduling Utilizing Multiple Product Demand Model"</a> 
 <br>
-Invention disclosure published in May 2017 and granted in 2020 (M. C. Cohen, J. J. Kalas, K. Panchamgam and G. Perakis) </a></p>
-</li>
-  
+Invention disclosure published in 2017 and granted in 2020 (M. C. Cohen, J. J. Kalas, K. Panchamgam and G. Perakis) </a></p>
+
+<br>
 <li><p><b>US20150081393 A1</b> – <a href="https://www.google.com/patents/US20150081393">"Product Promotion Optimization System"</a> 
 <br>
-Invention disclosure published in March 2015 (M. C. Cohen, Z. Leung, K. Panchamgam and G. Perakis) </a></p>
+Invention disclosure published in 2015 (M. C. Cohen, Z. Leung, K. Panchamgam and G. Perakis) </a></p>
 
 <br>
 <li><p><b>US20150006267 A1</b> - <a href="https://www.google.com/patents/US20150006267">"Designing Price Incentives in a Network with Social Interactions"</a>
 <br>
-Invention disclosure published in January 2015 (M. C. Cohen, P. Harsha and M. Ettl) </a></p>
+Invention disclosure published in 2015 (M. C. Cohen, P. Harsha and M. Ettl) </a></p>
 <br>
 
 <li><p><b>US20130275183 A1</b> – <a href="https://www.google.com/patents/US20130275183">"Time-Dependent Product Pricing Optimizer"</a>
 <br>
-Invention disclosure published in October 2013 (M. C. Cohen, A. Vakhutinsky and K. Panchamgam) </a></p>
-<br>
+Invention disclosure published in 2013 (M. C. Cohen, A. Vakhutinsky and K. Panchamgam) </a></p>
+</li>
 
 <div id="footer">
 <div id="footer-text">
