--- a/news.html
+++ b/news.html
@@ -31,6 +31,8 @@
 <h3>In the News</h3>
 <ul>
 
+<li><p><a href="https://www.mcgilltribune.com/news/redzone10-06-2020/">Growing COVID-19 Case Count Pushes Montreal Into the Red Zone</a>, McGill Tribune, October 2020</p>
+    
 <li><p><a href="https://maxccohen.github.io/(R)evolution.pdf">(R)evolution of the Commercial & Retail Destination</a>, July 2020</p>
   
 <li><p><a href="https://myalumni.mcgill.ca/s/1762/gid2/interior-connect2.aspx?sid=1762&gid=2&pgid=2241">How COVID-19 Is Reshaping the Retail Industry</a>, McGill Alumni Webcast, June 2020</p>
