--- a/research.html
+++ b/research.html
@@ -275,7 +275,7 @@ Accepted for oral presentation at the 2020 Workshop on Mechanism Design for Soci
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3665366">"Field Experiments (and the lack of thereof) for Testing Revenue Strategies in the Hospitality Industry,"</a> with D. Lopez Mateos and N. Pyron, Revise and Resubmit in <b>Cornell Hospitality Quarterly</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3665366">"Field Experiments (and the lack of thereof) for Testing Revenue Strategies in the Hospitality Industry,"</a> with D. Lopez Mateos and N. Pyron, Under second round of review in <b>Cornell Hospitality Quarterly</b> (after Revise and Resubmit) <br />
 </div>
 </li>
 </ul>
