--- a/research.html
+++ b/research.html
@@ -399,7 +399,7 @@ In this paper, we ....
 </ul>
 
 <ul>
-<li><p><a href="">"Frictionless Retail: Present and Future,"</a> with S. Zhu and S. Ray, submitted
+<li><p><a href="">"Frictionless Retail: Present and Future,"</a> with S. Zhu and S. Ray, Submitted
 </div>
 </p>
 </li>
