--- a/students.html
+++ b/students.html
@@ -55,7 +55,7 @@
 
 <li><p>Marcos Galante (2018) - NYU UG Stern Honors. First Position: Goldman Sachs, Investment Banking</p>
 
-<li><p>Junge Zhang (2020) - M.S. in Data Science at NYU</p>
+<li><p>Junge Zhang (2020) - M.S. in Data Science at NYU. First position: BOSS直聘, Algorithm Engineer</p>
   
 <li><p>Matthieu Reed (2020) - McGill UG Integrated Management Student Fellow. First Position: Gorilla Group, Business Analyst</p>
   
