--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@ I am co-organizing the <a href="https://sites.google.com/view/nycopsday2019/home
 1001 Sherbrooke St W, Montreal, QC H3A 1G5
 
 <h3> <a href="https://www.linkedin.com/in/maximecohen">
+<img src="linkedin_logo.jpg" alt="Linkedin Logo" width="115px"  /></a> 
+  <a href="https://www.linkedin.com/in/maximecohen">
 <img src="linkedin_logo.jpg" alt="Linkedin Logo" width="115px"  /></a> </p>
 
   <div id="footer">
