--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ I am co-organizing the <a href="https://sites.google.com/view/nycopsday2019/home
 
 <h3> <a href="https://www.linkedin.com/in/maximecohen">
 <img src="linkedin_logo.jpg" alt="Linkedin Logo" width="115px"  /></a> 
-  <a href="https://www.linkedin.com/in/maximecohen">
-<img src="linkedin_logo.jpg" alt="Linkedin Logo" width="115px"  /></a> </p>
+  <a href="https://scholar.google.com/citations?hl=en&user=btWJVrgAAAAJ">
+<img src="GScholar_logo.jpg" alt="Linkedin Logo" width="115px"  /></a> </p>
 
   <div id="footer">
 
@@ -116,7 +116,7 @@ I am co-organizing the <a href="https://sites.google.com/view/nycopsday2019/home
 </td>
 </tr>
 </table>
-<!-- Start of StatCounter Code for Default Guide -->
+<!-- Start of StatCounter Code for Default Guide 
 <script type="text/javascript">
 var sc_project=8895177; 
 var sc_invisible=0; 
@@ -132,7 +132,7 @@ statistics" href="http://statcounter.com/"
 target="_blank"><img class="statcounter"
 src="http://c.statcounter.com/8895177/0/02e2ba1b/0/"
 alt="website statistics"></a></div></noscript>
-<!-- End of StatCounter Code for Default Guide -->
+ End of StatCounter Code for Default Guide -->
 </body>
 
 </html>
