--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ I am co-organizing the <a href="https://sites.google.com/view/nycopsday2019/home
 <h3> <a href="https://www.linkedin.com/in/maximecohen">
 <img src="linkedin_logo.jpg" alt="Linkedin Logo" width="115px"  /></a> 
   <a href="https://scholar.google.com/citations?hl=en&user=btWJVrgAAAAJ">
-<img src="GScholar_logo.jpg" alt="Google Scholar Logo" height="90px" width="105px"  /></a> </p>
+<img src="GScholar_logo.jpg" alt="Google Scholar Logo" height="70" width="105"  /></a> </p>
 
   <div id="footer">
 
