--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ I am co-organizing the <a href="https://sites.google.com/view/nycopsday2019/home
 <h3> <a href="https://www.linkedin.com/in/maximecohen">
 <img src="linkedin_logo.jpg" alt="Linkedin Logo" width="115px"  /></a> 
   <a href="https://scholar.google.com/citations?hl=en&user=btWJVrgAAAAJ">
-<img src="GScholar_logo2.png" alt="Google Scholar Logo" height="50" width="95"  /></a> 
+<img src="GScholar_logo2.jpg" alt="Google Scholar Logo" height="50" width="95"  /></a> 
   <a href="https://papers.ssrn.com/sol3/cf_dev/AbsByAuth.cfm?per_id=2182143">
 <img src="SSRN_logo.jpg" alt="SSRN Logo" width="115px"  /></a></p>
 
