--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ I am co-organizing the <a href="https://sites.google.com/view/nycopsday2019/home
   <a href="https://scholar.google.com/citations?hl=en&user=btWJVrgAAAAJ">
 <img src="GScholar_logo2.jpg" alt="Google Scholar Logo" height="50" width="95"  /></a> 
   <a href="https://papers.ssrn.com/sol3/cf_dev/AbsByAuth.cfm?per_id=2182143">
-<img src="SSRN_logo.jpg" alt="SSRN Logo" width="115px"  /></a></p>
+<img src="SSRN_logo.jpg" alt="SSRN Logo" height="50" width="95"  /></a></p>
 
   <div id="footer">
 
