--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@ I am co-organizing the <a href="https://sites.google.com/view/nycopsday2019/home
 
 <h3> <a href="https://www.linkedin.com/in/maximecohen">
 <img src="linkedin_logo.jpg" alt="Linkedin Logo" width="115px"  /></a> 
-  <a href="https://papers.ssrn.com/sol3/cf_dev/AbsByAuth.cfm?per_id=2182143">
+    <a href="https://scholar.google.com/citations?hl=en&user=btWJVrgAAAAJ">
+<img src="Twitter_logo.jpg" alt="Twitter Logo" height="35" width="43"  /></a>
+  <a href="https://twitter.com/maxccohen">
 <img src="SSRN_logo.jpg" alt="SSRN Logo" height="27" width="63"  /></a>
   <a href="https://scholar.google.com/citations?hl=en&user=btWJVrgAAAAJ">
 <img src="Gscholar_logo2.jpg" alt="Google Scholar Logo" height="35" width="43"  /></a> </p>
