--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@ Data Science and AI @<a href="https://conflictanalytics.queenslaw.ca/"</a> Confl
 My core expertise lies at the intersection of <b>data science</b> and <b>operations management</b>. I have worked on retail, ride-sharing, airline, sustainability,
 cloud computing, online advertising, peer-to-peer lending, and social networks. I have collaborated with different companies including Google, Waze, Oracle Retail, IBM Research, Via (ride-sharing), Spotify, Aldo Group, Couche-Tard/Circle K, Cargo, Staples as well as several retailers and startups. In each project, I have worked closely with the company to develop solutions 
 using tools such as optimization, machine learning, stochastic modeling, econometrics, game theory, and field experiments.  <!--I currently serve as a senior editor for the <a href="http://www.poms.org/journal/"</a>POMS</a> journal. -->
- 
+
+<br /> <br />
+I serve as an Associate Editor for <a href="https://pubsonline.informs.org/journal/mnsc"</a>Management Science</a>, a Senior Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a>, and an Advisor for <a href="https://mbrjournal.com/"</a>Management and Business Review</a>. I have also served as a guest associate editor for <a href="https://pubsonline.informs.org/journal/msom"</a>M&SOM</a> and for <a href="https://onlinelibrary.wiley.com/journal/15206750"</a>NRL</a>.
+
  <p><b>Ph.D.</b>, Operations Research, <a href="http://www.mit.edu/">MIT</a>
  
  <p><b>M.S.</b>, Electrical Engineering, <a href="http://www.technion.ac.il/en/">Technion</a>
