--- a/workEx.html
+++ b/workEx.html
@@ -39,21 +39,21 @@ Marketing modules for Integrated Management Thinking and Executive Development C
 </ul>
   
 <ul>
-<li><p><b><a href="">Operations Management - McGill University - 2020 </a></b><br />
+<li><p><b><a href="">Operations Management - McGill University - 2020 & 2021 </a></b><br />
 Undergraduate core course (2 sections of 65 students). Evaluations: 4.9, 4.6 (out of 5)
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p><b><a href="">Revenue Management - McGill University - 2020 </a></b><br />
+<li><p><b><a href="">Revenue Management - McGill University - 2020 & 2021 </a></b><br />
 Elective course for Master of Management in Analytics. Evaluation: 5/5
 </p>
 </li>
 </ul>
   
 <ul>
-<li><p><b><a href="">Service Analytics - McGill University - 2020 </a></b><br />
+<li><p><b><a href="">Service Analytics - McGill University - 2020 & 2021 </a></b><br />
 Elective course for Master of Management in Analytics. Evaluation: 4.7/5
 </p>
 </li>
@@ -113,7 +113,7 @@ Finalist in the 2019 <b>INFORMS Case Competition</b> <br />
 
 <ul>
 <li><p><b><a href="">Case Study: "Modern Retail Analytics: Data Visualization Using Tableau,"</a></b> with C. D. Guetta and M. Reed<br /> 
-Featured as a content piece on the <a href="https://community.tableau.com/community/teachers/overview">Tableau Instructor Resource Page. </a> <a href="https://danguetta.github.io/research/globalsuperstore">Case, Dataset, and Tutorials</a>
+Featured as a content piece on the <a href="https://community.tableau.com/s/feed/0D54T00000C5O43SAF">Tableau Instructor Resource Page. </a> <a href="https://danguetta.github.io/research/globalsuperstore">Case, Dataset, and Tutorials</a>
 </p>
 </li>
 </ul>
