--- a/research.html
+++ b/research.html
@@ -163,8 +163,8 @@ Finalist for the 2016 Service Science Section Student Paper Competition <br />
 </ol>
 
 <ol start="11">
-<li><p><a href="https://maxccohen.github.io/Feature-Based-Dynamic-Pricing.pdf">"Feature-Based Dynamic Pricing,"</a> with I. Lobel and R. Paes Leme, <b>Management Science</b> (published online, May 2020) <br />
-Accepted to the 2016 <i>ACM Conference on Economics & Computation </i> (EC)<br />
+<li><p><a href="https://maxccohen.github.io/Feature-Based-Dynamic-Pricing.pdf">"Feature-Based Dynamic Pricing,"</a> with I. Lobel and R. Paes Leme, <b>Management Science</b> 66(11): 4921-4943, 2020 (<b>lead article</b>) <br />
+Accepted to the 2016 <i>ACM Conference on Economics & Computation </i> <br />
 Associated article in <a href="http://www.sigecom.org/exchanges/volume_15/2/COHEN.pdf">SIGecom Exchanges</a> <br />
 <a href="https://maxccohen.github.io/Feature-Based-Appendix.pdf">Online Appendix</a> <br />
 </div>
@@ -174,7 +174,7 @@ Associated article in <a href="http://www.sigecom.org/exchanges/volume_15/2/COHE
 
 <ol start="12">
 <li><p><a href="https://maxccohen.github.io/Simple-Rule-for-Pricing.pdf">"A Simple Rule for Pricing with Limited Knowledge of Demand,"</a> with R. S. Pindyck and G. Perakis, Forthcoming in <b>Management Science</b> (published online, June 2020) <br />
-Accepted to the 2016 <i>ACM Conference on Economics & Computation </i> (EC)<br />
+Accepted to the 2016 <i>ACM Conference on Economics & Computation </i> <br />
 <a href="https://www.nber.org/papers/w21679">NBER Working Paper No. 21679</a> <br />
 </div>
 </p>
