--- a/research.html
+++ b/research.html
@@ -163,7 +163,8 @@ Finalist for the 2016 Service Science Section Student Paper Competition <br />
 </ol>
 
 <ol start="11">
-<li><p><a href="https://maxccohen.github.io/Feature-Based-Dynamic-Pricing.pdf">"Feature-Based Dynamic Pricing,"</a> with I. Lobel and R. Paes Leme, <b>Management Science</b> 66(11): 4921-4943, 2020 (<b>lead article</b>) <br />
+<li><p><a href="https://maxccohen.github.io/Feature-Based-Dynamic-Pricing.pdf">"Feature-Based Dynamic Pricing,"</a> with I. Lobel and R. Paes Leme, <b>Management Science</b> 66(11): 4921-4943, 2020 <br />
+<b>Lead article</b> <br />
 Accepted to the 2016 <i>ACM Conference on Economics & Computation </i> <br />
 Associated article in <a href="http://www.sigecom.org/exchanges/volume_15/2/COHEN.pdf">SIGecom Exchanges</a> <br />
 <a href="https://maxccohen.github.io/Feature-Based-Appendix.pdf">Online Appendix</a> <br />
