--- a/awards.html
+++ b/awards.html
@@ -37,6 +37,8 @@
 
 <li><p>Finalist in the POMS College of Behavioral Operations Junior Scholar Paper Competition, 2020</p>
   
+<li><p>2020 M&SOM Meritorious Service Award</p>
+  
 <li><p>First Place in the Best OM Paper in Management Science Award, 2019</p>
   
 <li><p>Finalist in the INFORMS Data Mining Section Best Paper Competition, 2019</p>
