--- a/workEx.html
+++ b/workEx.html
@@ -117,6 +117,12 @@ Featured as a content piece on the <a href="https://community.tableau.com/s/feed
 </p>
 </li>
 </ul>
+ 
+<ul>
+<li><p><b><a href="">Case Study: "Danone & Digitad: Building a Data-Driven Digital Marketing Strategy,"</a></b> with A. Sylvestre, A. Corbasson, and J. Abbou
+</p>
+</li>
+</ul>
   
 <!--
 <ul>
