--- a/workEx.html
+++ b/workEx.html
@@ -234,6 +234,13 @@ Conducted research across multiple areas including market algorithms, pricing, a
 </ul>
 
 <ul>
+<li><p><b><a href="#">Aldo Group, Montreal, Canada (2019-2020)</a></b><br />
+<b>Strategic Advisor in Pricing and Data Science</b>
+</p>
+</li>
+</ul>
+  
+<ul>
 <li><p><b><a href="http://www.research.ibm.com/labs/watson/index.shtml">IBM Research, Watson Research Center (Summer 2012)</a></b><br />
 <b>Research Intern - Business Analytics and Math Sciences</b><br />
 Worked on improving pricing and promotion strategies by incorporating social and influence data. Proposed a practical formulation that allows efficient computation of the optimal pricing strategies while considering network and influence effects.</p>
