--- a/workEx.html
+++ b/workEx.html
@@ -227,19 +227,26 @@ Teacher of psychometric test preparation course for several groups of students.
 <h2>Work Experience</h2>
 
 <ul>
+<li><p><b><a href="#">Aldo Group, Montreal, Canada (2019-2020)</a></b><br />
+<b>Strategic Advisor in Pricing and Data Science</b>
+</p>
+</li>
+</ul>
+ 
+<ul>
+<li><p><b><a href="#">New York University, Stern School of Business, New York, NY (2016-2019)</a></b><br />
+<b>Assistant Professor of Technology, Operations, and Statistics</b>
+</p>
+</li>
+</ul>
+  
+<ul>
 <li><p><b><a href="https://research.google.com/pubs/AlgorithmsandTheory.html">Google AI, New York NY (2015-2016)</a></b><br />
 <b>Postdoctoral Research Scientist - Research Team</b><br />
 Conducted research across multiple areas including market algorithms, pricing, auctions, cloud computing, and optimization. Worked on products related to cloud computing, contracts for online advertising, and Internet domain names.</p>
 </li>
 </ul>
 
-<ul>
-<li><p><b><a href="#">Aldo Group, Montreal, Canada (2019-2020)</a></b><br />
-<b>Strategic Advisor in Pricing and Data Science</b>
-</p>
-</li>
-</ul>
-  
 <ul>
 <li><p><b><a href="http://www.research.ibm.com/labs/watson/index.shtml">IBM Research, Watson Research Center (Summer 2012)</a></b><br />
 <b>Research Intern - Business Analytics and Math Sciences</b><br />
