--- a/workEx.html
+++ b/workEx.html
@@ -227,6 +227,20 @@ Teacher of psychometric test preparation course for several groups of students.
 <h2>Work Experience</h2>
 
 <ul>
+<li><p><b><a href="#">Turbodega, Cherre, Rebloc.io, Silverback.ai, U.S., Canada, and Israel  (2017-present)</a></b><br />
+<b>Member of Advisory Board</b>
+</p>
+</li>
+</ul>
+  
+<ul>
+<li><p><b><a href="#">Sarona Ventures, Tel Aviv, Israel (2017-present)</a></b><br />
+<b>Advisor</b>
+</p>
+</li>
+</ul>
+  
+<ul>
 <li><p><b><a href="#">Aldo Group, Montreal, Canada (2019-2020)</a></b><br />
 <b>Strategic Advisor in Pricing and Data Science</b>
 </p>
