--- a/workEx.html
+++ b/workEx.html
@@ -227,7 +227,37 @@ Teacher of psychometric test preparation course for several groups of students.
 <h2>Work Experience</h2>
 
 <ul>
-<li><p><b><a href="#">Turbodega, Cherre, Rebloc.io, Silverback.ai, U.S., Canada, and Israel  (2017-present)</a></b><br />
+<li><p><b><a href="#">McGill University, BSRM and Desautels Faculty of Management, Montreal, Canada (2020-present)</a></b><br />
+<b>Associate Professor of Retail Management and Operations Management (with tenure)</b><br />
+Co-Director of the McGill Retail Innovation Lab<br />
+Bensadoun Faculty Scholar
+</p>
+</li>
+</ul>
+  
+<ul>
+<li><p><b><a href="#">IVADO LABS, Montreal, Canada (2020-present)</a></b><br />
+<b>Scientific Advisor in AI and Data Science</b>
+</p>
+</li>
+</ul>
+  
+<ul>
+<li><p><b><a href="#">Conflict Analytics Lab and MyOpenCourt.org, Canada (2018-present)</a></b><br />
+<b>Research in Data Science and AI</b>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><b><a href="#">Google/Waze, U.S. and Israel (2018-2019)</a></b><br />
+<b>Advisor at Google (via Adecco) - Pricing and Incentives Lead at Waze</b>
+</p>
+</li>
+</ul>
+  
+<ul>
+<li><p><b><a href="#">Turbodega, Cherre, Rebloc.io, Silverback.ai, U.S., Canada, and Israel (2017-present)</a></b><br />
 <b>Member of Advisory Board</b>
 </p>
 </li>
