--- a/workEx.html
+++ b/workEx.html
@@ -229,8 +229,8 @@ Teacher of psychometric test preparation course for several groups of students.
 <ul>
 <li><p><b><a href="#">McGill University, BSRM and Desautels Faculty of Management, Montreal, Canada (2020-present)</a></b><br />
 <b>Associate Professor of Retail Management and Operations Management (with tenure)</b><br />
-<b>Co-Director of the McGill Retail Innovation Lab</b><br />
-<b>Bensadoun Faculty Scholar</b>
+Co-Director of the McGill Retail Innovation Lab<br />
+Bensadoun Faculty Scholar
 </p>
 </li>
 </ul>
