--- a/workEx.html
+++ b/workEx.html
@@ -230,7 +230,9 @@ Teacher of psychometric test preparation course for several groups of students.
 <li><p><b><a href="#">McGill University, BSRM and Desautels Faculty of Management, Montreal, Canada (2020-present)</a></b><br />
 <b>Associate Professor of Retail Management and Operations Management (with tenure)</b><br />
 Co-Director of the McGill Retail Innovation Lab<br />
-Bensadoun Faculty Scholar
+Bensadoun Faculty Scholar<br />
+Associate Member, Electrical and Computer Engineering Department (by courtesy)<br />
+Member of CIRRELT - Research Center on Enterprise Networks, Logistics and Transportation
 </p>
 </li>
 </ul>
