--- a/research.html
+++ b/research.html
@@ -290,6 +290,13 @@ Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3732463">"Revisiting Bertrand Competition in the Face of Customer Heterogeneity and Price Discrimination,"</a> with A.Jacquillat and H. Song, Submitted <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3088600">"Best of Both Worlds Ad Contracts: Guaranteed Allocation and Price with Programmatic Efficiency,"</a> with A. Desir, N. Koroula, and B. Sivan, Submitted <br />
 </div>
 </p>
