--- a/research.html
+++ b/research.html
@@ -277,6 +277,7 @@ Accepted for oral presentation at the 2020 Workshop on Mechanism Design for Soci
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3665366">"Field Experiments (and the lack of thereof) for Testing Revenue Strategies in the Hospitality Industry,"</a> with D. Lopez Mateos and N. Pyron, Under second round of review in <b>Cornell Hospitality Quarterly</b> (after Revise and Resubmit) <br />
+Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenue-management-strategies-in-hotels/">Revenue Hub</a> <br />
 </div>
 </li>
 </ul>
