--- a/workEx.html
+++ b/workEx.html
@@ -32,7 +32,7 @@
 <h2>Teaching Experience</h2>
 
 <ul>
-<li><p><b><a href="">Mini MBA, McGill University Executive Institute - 2020 </a></b><br />
+<li><p><b><a href="">Mini MBA, McGill University Executive Institute - 2020 & 2021 </a></b><br />
 Marketing modules for Integrated Management Thinking and Executive Development Course (co-taught with Carl Boutet)
 </p>
 </li>
