--- a/students.html
+++ b/students.html
@@ -39,9 +39,9 @@
 
 <li><p>Moshe Unger (2021) - Postdoctoral fellow at NYU (main host: Alex Tuzhilin). First position: Assistant Professor of Technology and Information Management, Tel Aviv University</p>
 
+<li><p>Carlos Fernandez - IS Ph.D. student at  NYU (advisor: Foster Provost). First position: Assistant Professor of Information Systems at HKUST</p>
+  
 <li><p>Park Sinchaisri - OID Ph.D. student at Wharton (advisor: Gad Allon)</p>
-
-<li><p>Carlos Fernandez - IS Ph.D. student at  NYU (advisor: Foster Provost)</p>
     
 <li><p>Haotian Song - OM Ph.D. student at NYU (advisor: Wenqiang Xiao)</p>
 
