--- a/research.html
+++ b/research.html
@@ -354,12 +354,6 @@ In this paper, we ....
 <!--
 <h3>Papers in Preparation</h3>
 
-<ul>
-<li><p>"Revisiting Bertrand Competition in the Face of Quality Differentiation and Customer Heterogeneity," with A. Jacquillat and H. Song. <br />
-</div>
-</p>
-</li>
-</ul>
 
 <ul>
 <li><p>"The Impact of Service Experience on Engagement: Empirical Evidence from Ride-Sharing," with B. J. Kim. <br />
@@ -382,19 +376,13 @@ In this paper, we ....
 </li>
 </ul>
 
-<ul>
-<li><p>"Clustering-Based Prediction Models," with K. Jiao and R. Zhang. <br />
-</div>
-</p>
-</li>
-</ul>
 -->
 
 
 <h3>Practitioner and Conference Publications</h3>
 
 <ul>
-<li><p><a href="">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with S. Dahan and C. Rule, Forthcoming in <b>Management and Business Review</b>
+<li><p><a href="https://maxccohen.github.io/Conflict-Analytics-MBR.pdf">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with S. Dahan and C. Rule, Forthcoming in <b>Management and Business Review</b>
 </div>
 </p>
 </li>
