--- a/news.html
+++ b/news.html
@@ -31,6 +31,8 @@
 <h3>In the News</h3>
 <ul>
 
+<li><p><a href="https://www.mcgill.ca/newsroom/channels/news/experts-black-friday-and-holiday-shopping-during-covid-19-pandemic-326430">Experts: Black Friday and holiday shopping during the COVID-19 pandemic</a> McGill Newsroom, November 2020</p>
+    
 <li><p><a href="https://revenue-hub.com/why-so-little-testing-of-revenue-management-strategies-in-hotels/">Why So Little Testing of Revenue Management Strategies in Hotels?</a> Revenue Hub, November 2020</p>
     
 <li><p><a href="https://www.mcgilltribune.com/news/redzone10-06-2020/">Growing COVID-19 Case Count Pushes Montreal Into the Red Zone</a>, McGill Tribune, October 2020</p>
