--- a/research.html
+++ b/research.html
@@ -291,6 +291,15 @@ Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3411653">"Data Aggregation and Demand Prediction,"</a> with R. Zhang and K. Jiao, Under second round of review in <b>Manufacturing & Service Operations Management</b> (after Reject and Resubmit) <br />
+[<a href="https://github.com/DACPublicator/DAC_Publication">Code</a>] <br />
+Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3732463">"Revisiting Bertrand Competition in the Face of Customer Heterogeneity and Price Discrimination,"</a> with A. Jacquillat and H. Song, Submitted <br />
 </div>
 </p>
@@ -315,14 +324,6 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-com
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3565117">"The Impact of High-Occupancy Vehicle Lanes on Commuters: Field Evidence,"</a> with A. Ratzon and R. Sasson, Submitted <br /> 
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3411653">"Data Aggregation and Demand Prediction,"</a> with K. Jiao and R. Zhang, Submitted [<a href="https://github.com/DACPublicator/DAC_Publication">Code</a>]<br />
-Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
 </div>
 </p>
 </li>
