--- a/research.html
+++ b/research.html
@@ -300,6 +300,14 @@ Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
 </ul>
 
 <ul>
+<li><p><a href="">"Data Analytics to Detect Panic Buying and Improve Products Distribution Amid Pandemic,"</a> with Y. Adulyasak, O. Benomar, A. Chaouachi, and W. Khern-am-nuai, Under second round of review in <b>Production and Operations Management (Special Issue on Managing Pandemics)</b> <br />
+Accepted to the 2020 Workshop on Information Technologies and Systems (WITS) <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3732463">"Revisiting Bertrand Competition in the Face of Customer Heterogeneity and Price Discrimination,"</a> with A. Jacquillat and H. Song, Submitted <br />
 </div>
 </p>
