--- a/research.html
+++ b/research.html
@@ -30,13 +30,14 @@ else { document.getElementById(theID).style.display = "block" } }
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research.html"class="current">Research</a></div>
-<div class="menu-item"><a href="workEx.html">Teaching and Work Experience</a></div>
-<div class="menu-item"><a href="Cohen_CV.pdf">CV</a></div>
+<div class="menu-item"><a href="teaching.html">Teaching and Case Studies</a></div>
+<div class="menu-item"><a href="workEx.html">Teaching and Case Studies</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
 <div class="menu-item"><a href="grants.html">Grants</a></div>
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="students.html">Students</a></div>
 <div class="menu-item"><a href="news.html">In the News</a></div>
+<div class="menu-item"><a href="Cohen_CV.pdf">CV</a></div>
 
 </td>
 <td id="layout-content">
