--- a/research.html
+++ b/research.html
@@ -31,7 +31,7 @@ else { document.getElementById(theID).style.display = "block" } }
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research.html"class="current">Research</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching and Case Studies</a></div>
-<div class="menu-item"><a href="workEx.html">Teaching and Case Studies</a></div>
+<div class="menu-item"><a href="workEx.html">Work Experience</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
 <div class="menu-item"><a href="grants.html">Grants</a></div>
 <div class="menu-item"><a href="patents.html">Patents</a></div>
