--- a/teaching.html
+++ b/teaching.html
@@ -226,9 +226,9 @@ Teacher of psychometric test preparation course for several groups of students.
 -->
 
   
-<div id="footer">
+<!--<div id="footer">
 <div id="footer-text">
-<!--Page generated 2009-08-14 17:53:05 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
+Page generated 2009-08-14 17:53:05 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
 </div>
 </div>
 </td>
