--- a/workEx.html
+++ b/workEx.html
@@ -131,9 +131,9 @@ High-frequency trading of futures in the short-term interest rate European marke
 
 
 
-<div id="footer">
+<!--<div id="footer">
 <div id="footer-text">
-<!--Page generated 2009-08-14 17:53:05 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
+Page generated 2009-08-14 17:53:05 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
 </div>
 </div>
 </td>
