--- a/index.html
+++ b/index.html
@@ -121,9 +121,11 @@ I am co-organizing the <a href="https://sites.google.com/view/nycopsday2019/home
 
 
 </div>
+</div>
 </td>
 </tr>
 </table>
+
 <!-- Start of StatCounter Code for Default Guide 
 <script type="text/javascript">
 var sc_project=8895177; 
