--- a/teaching.html
+++ b/teaching.html
@@ -113,7 +113,7 @@ Finalist in the 2019 <b>INFORMS Case Competition</b> <br />
 </ul>
 
 <ul>
-<li><p><b><a href="">Case Study: "Modern Retail Analytics: Data Visualization Using Tableau,"</a></b> with C. D. Guetta and M. Reed<br /> 
+<li><p><b><a href="https://maxccohen.github.io/Tableau-Case-Storyline.pdf">Case Study: "Modern Retail Analytics: Data Visualization Using Tableau,"</a></b> with C. D. Guetta and M. Reed<br /> 
 Featured as a content piece on the <a href="https://community.tableau.com/s/feed/0D54T00000C5O43SAF">Tableau Instructor Resource Page. </a> <a href="https://danguetta.github.io/research/globalsuperstore">Case, Dataset, and Tutorials</a>
 </p>
 </li>
