--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="research.html"class="current">Research</a></div>
+<div class="menu-item"><a href="index.html"class="current">Home</a></div>
+<div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching and Case Studies</a></div>
 <div class="menu-item"><a href="workEx.html">Work Experience</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
