--- a/teaching.html
+++ b/teaching.html
@@ -13,8 +13,8 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="research.html"class="current">Research</a></div>
-<div class="menu-item"><a href="teaching.html">Teaching and Case Studies</a></div>
+<div class="menu-item"><a href="research.html">Research</a></div>
+<div class="menu-item"><a href="teaching.html"class="current">Teaching and Case Studies</a></div>
 <div class="menu-item"><a href="workEx.html">Work Experience</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
 <div class="menu-item"><a href="grants.html">Grants</a></div>
