--- a/workEx.html
+++ b/workEx.html
@@ -13,9 +13,9 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="research.html"class="current">Research</a></div>
+<div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching and Case Studies</a></div>
-<div class="menu-item"><a href="workEx.html">Work Experience</a></div>
+<div class="menu-item"><a href="workEx.html"class="current">Work Experience</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
 <div class="menu-item"><a href="grants.html">Grants</a></div>
 <div class="menu-item"><a href="patents.html">Patents</a></div>
