--- a/awards.html
+++ b/awards.html
@@ -14,10 +14,10 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="research.html"class="current">Research</a></div>
+<div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching and Case Studies</a></div>
 <div class="menu-item"><a href="workEx.html">Work Experience</a></div>
-<div class="menu-item"><a href="awards.html">Awards</a></div>
+<div class="menu-item"><a href="awards.html"class="current">Awards</a></div>
 <div class="menu-item"><a href="grants.html">Grants</a></div>
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="students.html">Students</a></div>
