--- a/research.html
+++ b/research.html
@@ -148,7 +148,7 @@ Accepted to the 2017 <i>ACM SIGMETRICS Conference</i><br />
 
 <ol start="9">
 <li><p><a href="https://www.liebertpub.com/doi/pdf/10.1089/big.2018.0092">"Data-Driven Investment Strategies for Peer-to-Peer Lending,"</a> with C. D. Guetta, K. Jiao, and F. Provost, <b>Big Data</b> 6(3):191-213, 2018 <br />
-Among the 5 top-read articles of 2018 and 2019 <br />
+Among the 5 top-read articles of 2018, 2019, and 2020 <br />
 Media coverage: <a href="https://medium.com/center-for-data-science/a-new-comprehensive-case-study-for-data-science-classrooms-5330811e59df">Medium</a> <br />
 </div>
 </p>
