--- a/news.html
+++ b/news.html
@@ -54,7 +54,7 @@
   
 <li><p><a href="https://myopencourt.org/conflict-analytics-lab-launches-tools-for-those-affected-by-pandemic-layoffs/">Conflict Analytics Lab Launches Tools for Those Affected by Pandemic Layoffs</a>, Conflict Analytics Lab Blog, May 2020</p>
  
-<li><p><a href="https://maxccohen.github.io/CQIC_RAPPORT_COVID-29.pdf">COVID-19 Planifier la Reprise</a> (in French), Centre Quebecois Innovation en Commerce, April 2020</p>
+<li><p><a href="https://maxccohen.github.io/CQIC_RAPPORT_COVID-29.pdf">COVID-19 Planifier la reprise</a> (in French), Centre Quebecois Innovation en Commerce, April 2020</p>
   
 <li><p><a href="https://www.mcgill.ca/desautels/channels/news/delve-converting-commuters-carpoolers-320995">Converting Commuters Into Carpoolers</a>, Delve, March 2020</p>
  
