--- a/research.html
+++ b/research.html
@@ -277,7 +277,7 @@ Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transpa
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3665366">"Field Experiments (and the lack of thereof) for Testing Revenue Strategies in the Hospitality Industry,"</a> with D. Lopez Mateos and N. Pyron, Under second round of review in <b>Cornell Hospitality Quarterly</b> (after Revise and Resubmit) <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3665366">"Field Experiments (and the lack of thereof) for Testing Revenue Strategies in the Hospitality Industry,"</a> with D. Lopez Mateos and N. Pyron, Under third round of review in <b>Cornell Hospitality Quarterly</b> (after Revise and Resubmit) <br />
 Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenue-management-strategies-in-hotels/">Revenue Hub</a> <br />
 </div>
 </li>
