--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <img src="MCohen-2019-V2.png" alt="Maxime Cohen" height="285" width="245" />&nbsp;</td>
 <td align="left"><p><b>Maxime C. Cohen</b><br />
 Associate Professor, <a href="https://www.mcgill.ca/"</a> McGill University</a><br />
-Co-Director, <a href="https://www.mcgill.ca/bensadoun-school/mril"</a> Retail Innovation Lab at McGill University’s BSRM</a> <br />
+Co-Director, <a href="https://www.mcgill.ca/bensadoun-school/mril"</a> Retail Innovation Lab</a> at McGill University’s BSRM <br />
 Bensadoun Faculty Scholar <br />
 Associate Member, <a href="https://www.mcgill.ca/ece/"</a>Electrical and Computer Engineering Department</a> (by courtesy) <br />
 Member of <a href="https://www.cirrelt.ca/"</a> CIRRELT </a> <br />
@@ -61,7 +61,7 @@ Data Science and AI @<a href="https://conflictanalytics.queenslaw.ca/"</a> Confl
 
 <h2>About</h2>
  <p class="p2"><span>
- I am an Associate Professor of Retail Management and Operations Management, the co-director of the Retail Innovation Lab at McGill's BSRM, and a Bensadoun Faculty Scholar at <a href="https://www.mcgill.ca/"</a> McGill University</a>.
+ I am an Associate Professor of Retail Management and Operations Management, the co-director of the Retail Innovation Lab, and a Bensadoun Faculty Scholar at <a href="https://www.mcgill.ca/"</a> McGill University</a>.
  Before joining McGill, I was an Assistant Professor of Technology, Operations, and Statistics</a> 
  at <a href="http://www.stern.nyu.edu/"</a> NYU Stern</a> and a Research Scientist at <a href="https://ai.google/">Google AI</a>. 
  I previously worked as a high-frequency trader and co-founded a real estate investment company.
