--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <img src="MCohen-2019-V2.png" alt="Maxime Cohen" height="285" width="245" />&nbsp;</td>
 <td align="left"><p><b>Maxime C. Cohen</b><br />
 Associate Professor, <a href="https://www.mcgill.ca/"</a> McGill University</a><br />
-Co-Director, <a href="https://www.mcgill.ca/bensadoun-school/mril"</a> Retail Innovation Lab</a> at McGill University’s BSRM <br />
+Co-Director, <a href="https://www.mcgill.ca/bensadoun-school/ril"</a> Retail Innovation Lab</a> at McGill University’s BSRM <br />
 Bensadoun Faculty Scholar <br />
 Associate Member, <a href="https://www.mcgill.ca/ece/"</a>Electrical and Computer Engineering Department</a> (by courtesy) <br />
 Member of <a href="https://www.cirrelt.ca/"</a> CIRRELT </a> <br />
