--- a/awards.html
+++ b/awards.html
@@ -76,7 +76,7 @@
 
 <li><p>Finalist in the 2015 INFORMS Revenue Management and Pricing Practice Award</p>
 
-<li><p>First Place in the 2015 Best Student Paper POM Supply Chain</p><li><p>2015 NEDSI Conference Best Application of Theory Award</p>
+<li><p>First Place in the 2015 Best Student Paper POM Supply Chain Management</p><li><p>2015 NEDSI Conference Best Application of Theory Award</p>
 
 <li><p>First Place in the 2014 Best Student Paper Award - INFORMS Service Science</p>
 
