--- a/students.html
+++ b/students.html
@@ -64,7 +64,7 @@
   
 <li><p>Arthur Pentecoste (2020) - McGill Master of Management in Analytics. First Position: BCG GAMMA, Data Scientist</p>
   
-<li><p>Paul-Emile Gras (2020) - McGill Master of Management in Analytics</p>
+<li><p>Paul-Emile Gras (2020) - McGill Master of Management in Analytics. First Position: Virtuo, Data Scientist</p>
 
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
