--- a/research.html
+++ b/research.html
@@ -270,6 +270,7 @@ Media coverage: <a href="https://www.stern.nyu.edu/experience-stern/news-events/
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3459289">"Price Discrimination with Fairness Constraints,"</a> with A. N. Elmachtoub and X. Lei, Under third round of review in <b>Management Science</b> (after Major Revision) <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
+[<a href="https://github.com/leixiao32229/PDFC">Code</a>] <br />
 Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transparency</i> and accepted for oral presentation at the 2020 Workshop on Mechanism Design for Social Good <br />
 </div>
 </p>
