--- a/workEx.html
+++ b/workEx.html
@@ -43,7 +43,7 @@ Member of CIRRELT - Research Center on Enterprise Networks, Logistics and Transp
 </ul>
   
 <ul>
-<li><p><b><a href="#">IVADO LABS, Montreal, Canada (2020-present)</a></b><br />
+<li><p><b><a href="#">IVADO Labs, Montreal, Canada (2020-present)</a></b><br />
 <b>Scientific Advisor in AI and Data Science</b>
 </p>
 </li>
