--- a/students.html
+++ b/students.html
@@ -47,6 +47,10 @@
 <li><p>Haotian Song - OM Ph.D. student at NYU (advisor: Wenqiang Xiao)</p>
 
 <li><p>Xiao Lei - IEOR Ph.D. student at Columbia University (advisor: Adam Elmachtoub)</p>
+  
+<li><p>Guillaume Lapierre-Berger - Ph.D. student at McGill Desautels (co-advisor with Juan Serpa)</p>
+  
+<li><p>Nymisha Bandi - Ph.D. student at McGill Desautels (co-advisor with Saibal Ray)</p>
 
 </ul>
 <h3>M.S. and UG Students</h3>
@@ -65,6 +69,8 @@
 <li><p>Arthur Pentecoste (2020) - McGill Master of Management in Analytics. First Position: BCG GAMMA, Data Scientist</p>
   
 <li><p>Paul-Emile Gras (2020) - McGill Master of Management in Analytics. First Position: Virtuo, Data Scientist</p>
+  
+<li><p>Zacharie Houle (2021) - McGill UG Integrated Management Student Fellow</p>
 
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
