--- a/students.html
+++ b/students.html
@@ -71,6 +71,8 @@
 <li><p>Paul-Emile Gras (2020) - McGill Master of Management in Analytics. First Position: Virtuo, Data Scientist</p>
   
 <li><p>Zacharie Houle (2021) - McGill UG Integrated Management Student Fellow</p>
+  
+<li><p>Niloofar Tarighat - M.S. in ECE at McGill (co-advisor with James Clark)</p>
 
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
