--- a/students.html
+++ b/students.html
@@ -72,7 +72,7 @@
   
 <li><p>Zacharie Houle (2021) - McGill UG Integrated Management Student Fellow</p>
   
-<li><p>Niloofar Tarighat - M.S. in ECE at McGill (co-advisor with James Clark)</p>
+<li><p>Niloofar Tarighat - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark)</p>
 
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
