--- a/news.html
+++ b/news.html
@@ -32,6 +32,8 @@
 <h3>In the News</h3>
 <ul>
 
+<li><p><a href="https://www.iheartradio.ca/cjad/audio/mcgill-university-and-couchetard-are-partnering-to-help-make-retail-shopping-easy-for-you-during-the-pandemic-1.14401638?mode=Article">McGill University and Couche-Tard Are Partnering to Help Make Retail Shopping Easy for You During the Pandemic</a>, iHeartRadio, CJAD 800, January 2021</p>
+  
 <li><p><a href="https://plus.lapresse.ca/screens/714d5e9d-ded9-4e2b-b562-905b6723927a__7C___0.html?utm_content=email&utm_source=lpp&utm_medium=referral&utm_campaign=internal+sharep">Sortir du dépanneur sans s’arrêter pour payer</a> (in French), La Presse, January 2021</p>
 
 <li><p><a href="https://www.mtlblog.com/en-ca/news/montreal/montreals-retail-innovation-lab-at-mcgill-is-so-hightech-you-can-leave-without-paying">A Futuristic Store Just Opened In Montreal & You Can Leave Without Paying</a>, Montreal Blog, January 2021</p>
