--- a/news.html
+++ b/news.html
@@ -37,6 +37,8 @@
   
 <li><p><a href="https://plus.lapresse.ca/screens/714d5e9d-ded9-4e2b-b562-905b6723927a__7C___0.html?utm_content=email&utm_source=lpp&utm_medium=referral&utm_campaign=internal+sharep">Sortir du dépanneur sans s’arrêter pour payer</a> (in French), La Presse, January 2021</p>
 
+<li><p><a href="https://www.wsj.com/articles/mcgill-university-and-alimentation-couche-tard-launch-unique-laboratory-store-to-propel-retail-industry-and-customers-into-the-future-01610664551">McGill University and Alimentation Couche-Tard Launch Unique Laboratory Store to Propel Retail Industry and Customers Into the Future</a>, The Wall Street Journal, January 2021</p>
+    
 <li><p><a href="https://www.mtlblog.com/en-ca/news/montreal/montreals-retail-innovation-lab-at-mcgill-is-so-hightech-you-can-leave-without-paying">A Futuristic Store Just Opened In Montreal & You Can Leave Without Paying</a>, Montreal Blog, January 2021</p>
     
 <li><p><a href="https://www.lesaffaires.com/dossier/transformation-alimentaire/la-transformation-numerique-au-service-de-l-alimentation/622440">La transformation numérique au service de l'alimentation</a> (in French), Les affaires, January 2021</p>
