--- a/students.html
+++ b/students.html
@@ -40,15 +40,13 @@
 
 <li><p>Moshe Unger (2021) - Postdoctoral fellow at NYU (main host: Alex Tuzhilin). First position: Assistant Professor of Technology and Information Management, Tel Aviv University</p>
 
-<li><p>Carlos Fernandez - IS Ph.D. student at  NYU (advisor: Foster Provost). First position: Assistant Professor of Information Systems at HKUST</p>
+<li><p>Carlos Fernandez (2021) - IS Ph.D. student at  NYU (advisor: Foster Provost). First position: Assistant Professor of Information Systems at HKUST</p>
   
 <li><p>Park Sinchaisri - OID Ph.D. student at Wharton (advisor: Gad Allon)</p>
     
 <li><p>Haotian Song - OM Ph.D. student at NYU (advisor: Wenqiang Xiao)</p>
 
 <li><p>Xiao Lei - IEOR Ph.D. student at Columbia University (advisor: Adam Elmachtoub)</p>
-  
-<li><p>Guillaume Lapierre-Berger - Ph.D. student at McGill Desautels (co-advisor with Juan Serpa)</p>
   
 <li><p>Nymisha Bandi - Ph.D. student at McGill Desautels (co-advisor with Saibal Ray)</p>
 
