--- a/research.html
+++ b/research.html
@@ -296,6 +296,7 @@ Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3742121">"Data Analytics to Detect Panic Buying and Improve Products Distribution Amid Pandemic,"</a> with Y. Adulyasak, O. Benomar, A. Chaouachi, and W. Khern-am-nuai, Under second round of review in <b>Production and Operations Management (Special Issue on Managing Pandemics)</b> <br />
 Accepted to the 2020 Workshop on Information Technologies and Systems (WITS) <br />
+Media coverage: <a href="https://lactualite.com/techno/ne-plus-jamais-manquer-de-papier-de-toilette/">L'actualité (in French)</a> <br />
 </div>
 </p>
 </li>
