--- a/news.html
+++ b/news.html
@@ -32,6 +32,8 @@
 <h3>In the News</h3>
 <ul>
 
+<li><p><a href="https://globalnews.ca/video/7619230/how-ai-is-changing-the-way-we-shop/">How AI Is Changing the Way We Shop</a>, Global News Morning Montreal, February 2021</p>
+    
 <li><p><a href="https://lactualite.com/techno/ne-plus-jamais-manquer-de-papier-de-toilette/">Ne plus jamais manquer de papier de toilette</a> (in French), L'actualité, February 2021</p>
      
 <li><p><a href="https://ici.exploratv.ca/videos/3021-planete-techno-magasin-autonome/">À la découverte du paiement en temps réél</a> (in French), Planète techno ICI explora TV, January 2021</p>
