--- a/research.html
+++ b/research.html
@@ -311,6 +311,14 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-com
 </li>
 </ul>
 
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3780241">"The Impact of the Opportunity Zone Program on the Residential Real Estate Market,"</a> with R. Bekkerman, J. Maiden, and D. Mitrofanov, Submitted <br />
+</div>
+</p>
+</li>
+</ul>
+
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3088600">"Best of Both Worlds Ad Contracts: Guaranteed Allocation and Price with Programmatic Efficiency,"</a> with A. Desir, N. Koroula, and B. Sivan, Submitted <br />
 </div>
