--- a/research.html
+++ b/research.html
@@ -285,15 +285,6 @@ Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3411653">"Data Aggregation and Demand Prediction,"</a> with R. Zhang and K. Jiao, Under second round of review in <b>Manufacturing & Service Operations Management</b> (after Reject and Resubmit) <br />
-[<a href="https://github.com/DACPublicator/DAC_Publication">Code</a>] <br />
-Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3742121">"Data Analytics to Detect Panic Buying and Improve Products Distribution Amid Pandemic,"</a> with Y. Adulyasak, O. Benomar, A. Chaouachi, and W. Khern-am-nuai, Under second round of review in <b>Production and Operations Management (Special Issue on Managing Pandemics)</b> <br />
 Accepted to the 2020 Workshop on Information Technologies and Systems (WITS) <br />
 Media coverage: <a href="https://lactualite.com/techno/ne-plus-jamais-manquer-de-papier-de-toilette/">L'actualité (in French)</a> <br />
@@ -313,6 +304,15 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-com
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3088600">"Best of Both Worlds Ad Contracts: Guaranteed Allocation and Price with Programmatic Efficiency,"</a> with A. Desir, N. Koroula, and B. Sivan, Submitted <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3411653">"Data Aggregation and Demand Prediction,"</a> with R. Zhang and K. Jiao, Submitted <br />
+[<a href="https://github.com/DACPublicator/DAC_Publication">Code</a>] <br />
+Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
 </div>
 </p>
 </li>
