--- a/research.html
+++ b/research.html
@@ -201,6 +201,21 @@ Finalist in the 2018 M&SOM Student Paper Competition, First Place in the 2018 Be
 </li>
 </ol>
 
+<h3>Managerial Articles</h3>
+
+<ol start="15">
+<li><p><a href="https://maxccohen.github.io/Conflict-Analytics-MBR.pdf">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with S. Dahan and C. Rule, Forthcoming in <b>Management and Business Review</b>
+</div>
+</p>
+</li>
+</ol>
+
+<ol start="16">
+<li><p><a href="https://maxccohen.github.io/Promotions-Practice.pdf">"Upgrading Promotions Using Business Analytics,"</a> with L. Baardman, K. Panchamgam, and G. Perakis, Forthcoming in <b>Management and Business Review</b>
+</div>
+</p>
+</li>
+</ol>
 
 <h3>Book and Book Chapter</h3>
 
@@ -399,28 +414,7 @@ In this paper, we ....
 -->
 
 
-<h3>Practitioner and Conference Publications</h3>
-
-<ul>
-<li><p><a href="https://maxccohen.github.io/Conflict-Analytics-MBR.pdf">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with S. Dahan and C. Rule, Forthcoming in <b>Management and Business Review</b>
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://maxccohen.github.io/Promotions-Practice.pdf">"Upgrading Promotions Using Business Analytics,"</a> with L. Baardman, K. Panchamgam, and G. Perakis, Forthcoming in <b>Management and Business Review</b>
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="">"Frictionless Retail: Present and Future,"</a> with S. Zhu and S. Ray, Submitted
-</div>
-</p>
-</li>
-</ul>
+<h3>Conference Publications</h3>
 
 <ul>
 <li><p><a href="https://maxccohen.github.io/CohenShimkin2010.pdf">"Decentralized Algorithms for Sequential Network Time Synchronization,"</a> with N. Shimkin, Proc. NETCOOP, 4<sup>th</sup> Workshop on Network Control and Optimization, Ghent, Belgium, Dec. 2010, pp. 97-104 <br />
