--- a/news.html
+++ b/news.html
@@ -32,7 +32,7 @@
 <h3>In the News</h3>
 <ul>
 
-<li><p><a href="https://www.retailcouncil.org/coronavirus/covid-19-a-catalyst-or-a-hindrance-for-retail-sustainability-initiatives/">COVID-19: A Catalyst or a Hindrance for Retail Sustainability Initiatives?</a>, Retail Council of Canada, February 2021</p> 
+<li><p><a href="https://www.retailcouncil.org/coronavirus/covid-19-a-catalyst-or-a-hindrance-for-retail-sustainability-initiatives/">COVID-19: A Catalyst or a Hindrance for Retail Sustainability Initiatives?</a> Retail Council of Canada, February 2021</p> 
     
 <li><p><a href="https://globalnews.ca/video/7619230/how-ai-is-changing-the-way-we-shop/">How AI Is Changing the Way We Shop</a>, Global News Morning Montreal, February 2021</p>
     
