--- a/research.html
+++ b/research.html
@@ -292,17 +292,15 @@ Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science
 </ul>
 
 <ul>
-<li><p><a href="">"A Field Experiment on Airline Lead-in Fares,"</a> with A. Jacquillat and J. C. Serpa, Under second round of review in <b>Management Science</b> (after Reject and Resubmit) <br />
-Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3088600">"Best of Both Worlds Ad Contracts: Guaranteed Allocation and Price with Programmatic Efficiency,"</a> with A. Desir, N. Koroula, and B. Sivan, Major Revision in <b>Management Science</b> <br />
 </div>
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3742121">"Data Analytics to Detect Panic Buying and Improve Products Distribution Amid Pandemic,"</a> with Y. Adulyasak, O. Benomar, A. Chaouachi, and W. Khern-am-nuai, Under second round of review in <b>Production and Operations Management (Special Issue on Managing Pandemics)</b> <br />
-Accepted to the 2020 Workshop on Information Technologies and Systems (WITS) <br />
-Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tame-pandemic-panic-buying">Delve</a>, <a href="https://lactualite.com/techno/ne-plus-jamais-manquer-de-papier-de-toilette/">L'actualité (in French)</a> <br />
+<li><p><a href="">"A Field Experiment on Airline Lead-in Fares,"</a> with A. Jacquillat and J. C. Serpa, Under second round of review in <b>Management Science</b> (after Reject and Resubmit) <br />
+Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </div>
 </p>
 </li>
@@ -318,7 +316,9 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-com
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3088600">"Best of Both Worlds Ad Contracts: Guaranteed Allocation and Price with Programmatic Efficiency,"</a> with A. Desir, N. Koroula, and B. Sivan, Submitted <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3742121">"Data Analytics to Detect Panic Buying and Improve Products Distribution Amid Pandemic,"</a> with Y. Adulyasak, O. Benomar, A. Chaouachi, and W. Khern-am-nuai, Under second round of review in <b>Production and Operations Management (Special Issue on Managing Pandemics)</b> <br />
+Accepted to the 2020 Workshop on Information Technologies and Systems (WITS) <br />
+Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tame-pandemic-panic-buying">Delve</a>, <a href="https://lactualite.com/techno/ne-plus-jamais-manquer-de-papier-de-toilette/">L'actualité (in French)</a> <br />
 </div>
 </p>
 </li>
