--- a/grants.html
+++ b/grants.html
@@ -32,6 +32,8 @@
 <h3>Grants</h3>
 <ul>
 
+<li><p>2021-20022: Mitacs Accelerate: AI-Powered Dispute Settlement - $60,000; Role: Co-PI (with S. Dahan)</p>
+  
 <li><p>2020-2022: SSHRC Insight Development Grant: Using Data Science and Behavioral Analytics to Alleviate Traffic Congestion - $67,152; Role: PI</p>
 
 <li><p>2020-2021: Mitacs Accelerate: Adapting Retail Practices to the Post-Pandemic - $30,000; Role: Co-PI (with J. Clark)</p>
