--- a/research.html
+++ b/research.html
@@ -217,6 +217,20 @@ Finalist in the 2018 M&SOM Student Paper Competition, First Place in the 2018 Be
 </li>
 </ol>
 
+<ul>
+<li><p><a href="">"Frictionless Retail: What Should Retail Executives be Asking About it?"</a> with S. Zhu and S. Ray, Provisionally accepted in <b>MIT Sloan Management Review</b> <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="">"Leveraging Data & AI to Excel in a Post-Pandemic Retail World,"</a> with M. Krause, Y. Adulyasak, and W. Khern-am-nuai, Submitted <br />
+</div>
+</p>
+</li>
+</ul>
+
 <h3>Book and Book Chapter</h3>
 
 <ul>
