--- a/research.html
+++ b/research.html
@@ -349,6 +349,7 @@ Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3780241">"The Impact of the Opportunity Zone Program on the Residential Real Estate Market,"</a> with R. Bekkerman, J. Maiden, and D. Mitrofanov, Submitted <font color="red"<b>(NEW)</b></font> <br />
+Media coverage: <a href="https://www.propmodo.com/the-high-price-of-opportunity-zones/">Propmodo</a> <br />
 </div>
 </p>
 </li>
